--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="ico" href="/kthcloud.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>kthcloud visualize</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="ico" href="/kthcloud.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>kthcloud visualize</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;400;700&family=Noto+Color+Emoji&family=Public+Sans:wght@100;400;700&display=swap"
+    rel="stylesheet">
+</head>
+
+<body style="font-family: 'Public Sans', 'Noto Color Emoji';">
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+  <style>
+    .font-mono {
+      font-family: 'JetBrains Mono', 'Noto Color Emoji';
+    }
+  </style>
+</body>
+
 </html>
